# robotframework-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  arguments.py  dashboard.py  database.py  install.bat  package-lock.json  package.json  processors.py  pyprojec.toml  pyproject.toml  queries.py  release.bat  requirements-dev.txt  requirements-test.txt  requirements.txt  robot_dashboard.html  robotdashboard.py  setup.py  temp.html  tests.bat  version.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  tests.yml
01-basic-usage/: 01-single-output.bat  02-folder.bat  03-tags.bat  04-removal.bat
02-integrating-log/: log.bat
03-server/: 01-server.bat  02-server-complex.bat
04-customizing/: customizing.bat
05-config-usage/: config.bat  config.json
06-analyzing-results/: analyzing.bat
atest/tasks/: move-screenshots.robot
atest/testsuites/: 00_cli.robot  01_database.robot  02_overview.robot  03_dashboard.robot  04_compare.robot  05_tables.robot  06_filters.robot  07_settings.robot  __init__.robot  (+10 more)
docs/: 1-getting-started.md  2-installation-version-info.md  3-basic-command-line-interface-cli.md  6-dashboard-settings.md  advanced-cli-examples.md  basic-command-line-interface-cli.md  contributions.md  custom-database-class.md  customization.md  dashboard-server.md  filtering.md  getting-started.md  graphs-tables.md  index.md  installation-version-info.md  listener-integration.md  settings.md  tabs-pages.md
example/: messageconfig.txt  mysql.py  robot_dashboard.html  robot_results.db  sqlite3.py  template.py
robotframework_dashboard/: abstract_db.py  abstractdb.py  arguments.py  arguments_BACKUP_16542.py  dashboard.py  database.py  dependencies.py  main.py  processors.py  queries.py  robotdashboard.py  server.py  version.py
scripts/: copy-static.mjs  example.bat  install.bat  install.sh  release.bat  release.sh  start_venv.bat  start_venv.sh  tests.bat  tests.sh
templates/: index.html
(+247 files in other folders)
