[project]
name = "robotframework-dashboard"
version = "1.3.0"
description = "Output processor and dashboard generator for Robot Framework output files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [{ name = "Tim de Groot", email = "tim-degroot@live.nl" }]
keywords = ["robotframework", "dashboard", "reporting", "database"]
classifiers = [
    "Framework :: Robot Framework",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
dependencies = ["robotframework>=6.0"]

[project.optional-dependencies]
server = ["fastapi>=0.115.11", "uvicorn>=0.33.0"]
all = ["fastapi>=0.115.11", "uvicorn>=0.33.0"]

[project.urls]
Homepage = "https://github.com/timdegroot1996/robotframework-dashboard"
Documentation = "https://timdegroot1996.github.io/robotframework-dashboard/"
Source = "https://github.com/timdegroot1996/robotframework-dashboard"
Issues = "https://github.com/timdegroot1996/robotframework-dashboard/issues"

[project.scripts]
robotdashboard = "robotframework_dashboard.main:main"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
include = ["robotframework_dashboard"]
exclude = ["img*", "atest*", "node_modules*", "docs*", "example*", "scripts*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
